5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1759_2108.log
== TEST (2019-05-27 22:20:32) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:21:01) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]=p
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:21:19) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:21:52) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:23:27) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:24:29) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:24:47) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:26:30) 
-- CODE:
from numpy import*
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:27:43) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:29:13) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]= "p"
	i=i+1
print(a[2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 22:29:49) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:29:28) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]="p"
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:56) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		str(a[i])=str("p")
	i=i+1
print(a[0])
-- ERROR:
File "XXXX", line 6
    str(a[i])=str("p")
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:10) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]=str("p")
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:59) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]=str("p")
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:35) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]=str(p)
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:46) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
i=0
while(i<size(a)):
	if(a[i]!="a" and a[i]!="e" and a[i]!="i" and a[i]!="o" and a[i]!="u"):
		a[i]=str(a[i])
		a[i]='p'
	i=i+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* #nao entendi o pq de da errado
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:40:01) 
-- CODE:
from numpy import* #nao entendi o pq de da errado
a=input().lower()
a=a.replace("c","p")
a=a.replace("b","p")
a=a.replace("d","p")
a=a.replace("f","p")
a=a.replace("g","p")
a=a.replace("h","p")
a=a.replace("j","p")
a=a.replace("k","p")
a=a.replace("l","p")
a=a.replace("m","p")
a=a.replace("n","p")
a=a.replace("q","p")
a=a.replace("r","p")
a=a.replace("s","p")
a=a.replace("t","p")
a=a.replace("w","p")
a=a.replace("x","p")
a=a.replace("y","p")
a=a.replace("z","p")
print(a)
-- EXECUTION TIME:
0.380847
-- TEST CASE 1:
---- input:
teste
---- correct output:
peppe
---- user output:
peppe
-- TEST CASE 2:
---- input:
flor
---- correct output:
ppop
---- user output:
ppop
-- TEST CASE 3:
---- input:
abacaxi
---- correct output:
apapapi
---- user output:
apapapi
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
